[workspace.package]
authors = ["Gasp Team"]
edition = "2018"
repository = "https://github.com/gasp-xyz/gasp-monorepo.git"
homepage = "https://gasp.xyz"

[profile.dev]
split-debuginfo = "unpacked"

[profile.release]
panic = 'unwind'

[profile.production]
inherits = "release"
lto = true
codegen-units = 1

[workspace]
resolver = "2"
members = [
	'pallets/*',
	'rpc/nonce',
	'rollup/node',
	'rollup/runtime',
	'rollup/runtime/integration-test',
]

[workspace.dependencies]
alloy-primitives = { version = "0.5.0", default-features = false }
alloy-sol-types = { version = "0.5.0", default-features = false }
aquamarine = "0.1.12"
array-bytes = "6.1"
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false }
futures = "0.3.21"
hex = { version = "0.4.0", default-features = false }
hex-literal = { version = "0.3.3", default-features = false }
itertools = { version = "0.10.3", default-features = false }
jsonrpsee = { version = "0.22", default-features = false }
log = { version = "0.4.14", default-features = false }
scale-info = { version = "2.0.0", features = ["derive"], default-features = false }
serde = { version = "1.0.188", default-features = false }
serde_json = { version = "1.0.128", default-features = false }

#dev
assert_matches = "1.3.0"
env_logger = "0.9.0"
lazy_static = "1.1.1"
mockall = "0.11.0"
serial_test = { version = "0.6.0", default-features = false }
similar-asserts = "1.1.0"
test-case = "2.0.2"
tokio = "1.22.0"

#orml
orml-asset-registry = { git = "https://github.com/gasp-xyz/open-runtime-module-library", branch = "eth-rollup-develop", default-features = false }
orml-tokens = { git = "https://github.com/gasp-xyz/open-runtime-module-library", branch = "eth-rollup-develop", default-features = false }
orml-traits = { git = "https://github.com/gasp-xyz/open-runtime-module-library", branch = "eth-rollup-develop", default-features = false }

#polkdadot sdk
extrinsic-shuffler = { git = "https://github.com/gasp-xyz/polkadot-sdk", branch = "eth-rollup-develop", default-features = false }
fork-tree = { git = "https://github.com/gasp-xyz/polkadot-sdk", branch = "eth-rollup-develop", default-features = false }
frame-benchmarking = { git = "https://github.com/gasp-xyz/polkadot-sdk", branch = "eth-rollup-develop", default-features = false }
frame-benchmarking-cli = { git = "https://github.com/gasp-xyz/polkadot-sdk", branch = "eth-rollup-develop", default-features = false }
frame-executive = { git = "https://github.com/gasp-xyz/polkadot-sdk", branch = "eth-rollup-develop", default-features = false }
frame-support = { git = "https://github.com/gasp-xyz/polkadot-sdk", branch = "eth-rollup-develop", default-features = false }
frame-support-procedural = { git = "https://github.com/gasp-xyz/polkadot-sdk", branch = "eth-rollup-develop", default-features = false }
frame-support-procedural-tools = { git = "https://github.com/gasp-xyz/polkadot-sdk", branch = "eth-rollup-develop", default-features = false }
frame-support-procedural-tools-derive = { git = "https://github.com/gasp-xyz/polkadot-sdk", branch = "eth-rollup-develop", default-features = false }
frame-system = { git = "https://github.com/gasp-xyz/polkadot-sdk", branch = "eth-rollup-develop", default-features = false }
frame-system-benchmarking = { git = "https://github.com/gasp-xyz/polkadot-sdk", branch = "eth-rollup-develop", default-features = false }
frame-system-rpc-runtime-api = { git = "https://github.com/gasp-xyz/polkadot-sdk", branch = "eth-rollup-develop", default-features = false }
frame-try-runtime = { git = "https://github.com/gasp-xyz/polkadot-sdk", branch = "eth-rollup-develop", default-features = false }
mangata-support = { git = "https://github.com/gasp-xyz/polkadot-sdk", branch = "eth-rollup-develop", default-features = false }
mangata-types = { git = "https://github.com/gasp-xyz/polkadot-sdk", branch = "eth-rollup-develop", default-features = false }
pallet-aura = { git = "https://github.com/gasp-xyz/polkadot-sdk", branch = "eth-rollup-develop", default-features = false }
pallet-authorship = { git = "https://github.com/gasp-xyz/polkadot-sdk", branch = "eth-rollup-develop", default-features = false }
pallet-babe = { git = "https://github.com/gasp-xyz/polkadot-sdk", branch = "eth-rollup-develop", default-features = false }
pallet-balances = { git = "https://github.com/gasp-xyz/polkadot-sdk", branch = "eth-rollup-develop", default-features = false }
pallet-collective-mangata = { git = "https://github.com/gasp-xyz/polkadot-sdk", branch = "eth-rollup-develop", default-features = false }
pallet-grandpa = { git = "https://github.com/gasp-xyz/polkadot-sdk", branch = "eth-rollup-develop", default-features = false }
pallet-identity = { git = "https://github.com/gasp-xyz/polkadot-sdk", branch = "eth-rollup-develop", default-features = false }
pallet-membership = { git = "https://github.com/gasp-xyz/polkadot-sdk", branch = "eth-rollup-develop", default-features = false }
pallet-proxy = { git = "https://github.com/gasp-xyz/polkadot-sdk", branch = "eth-rollup-develop", default-features = false }
pallet-session = { git = "https://github.com/gasp-xyz/polkadot-sdk", branch = "eth-rollup-develop", default-features = false }
pallet-sudo-mangata = { git = "https://github.com/gasp-xyz/polkadot-sdk", branch = "eth-rollup-develop", default-features = false }
pallet-timestamp = { git = "https://github.com/gasp-xyz/polkadot-sdk", branch = "eth-rollup-develop", default-features = false }
pallet-transaction-payment = { git = "https://github.com/gasp-xyz/polkadot-sdk", branch = "eth-rollup-develop", default-features = false }
pallet-transaction-payment-rpc = { git = "https://github.com/gasp-xyz/polkadot-sdk", branch = "eth-rollup-develop", default-features = false }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/gasp-xyz/polkadot-sdk", branch = "eth-rollup-develop", default-features = false }
pallet-treasury = { git = "https://github.com/gasp-xyz/polkadot-sdk", branch = "eth-rollup-develop", default-features = false }
pallet-utility = { git = "https://github.com/gasp-xyz/polkadot-sdk", branch = "eth-rollup-develop", default-features = false }
pallet-utility-mangata = { git = "https://github.com/gasp-xyz/polkadot-sdk", branch = "eth-rollup-develop", default-features = false }
pallet-vesting-mangata = { git = "https://github.com/gasp-xyz/polkadot-sdk", branch = "eth-rollup-develop", default-features = false }
sc-allocator = { git = "https://github.com/gasp-xyz/polkadot-sdk", branch = "eth-rollup-develop", default-features = false }
sc-basic-authorship-ver = { git = "https://github.com/gasp-xyz/polkadot-sdk", branch = "eth-rollup-develop", default-features = false }
sc-block-builder = { git = "https://github.com/gasp-xyz/polkadot-sdk", branch = "eth-rollup-develop", default-features = false }
sc-block-builder-ver = { git = "https://github.com/gasp-xyz/polkadot-sdk", branch = "eth-rollup-develop", default-features = false }
sc-chain-spec = { git = "https://github.com/gasp-xyz/polkadot-sdk", branch = "eth-rollup-develop", default-features = false }
sc-chain-spec-derive = { git = "https://github.com/gasp-xyz/polkadot-sdk", branch = "eth-rollup-develop", default-features = false }
sc-cli = { git = "https://github.com/gasp-xyz/polkadot-sdk", branch = "eth-rollup-develop", default-features = false }
sc-client-api = { git = "https://github.com/gasp-xyz/polkadot-sdk", branch = "eth-rollup-develop", default-features = false }
sc-client-db = { git = "https://github.com/gasp-xyz/polkadot-sdk", branch = "eth-rollup-develop", default-features = false }
sc-consensus = { git = "https://github.com/gasp-xyz/polkadot-sdk", branch = "eth-rollup-develop", default-features = false }
sc-consensus-aura = { git = "https://github.com/gasp-xyz/polkadot-sdk", branch = "eth-rollup-develop", default-features = false }
sc-consensus-grandpa = { git = "https://github.com/gasp-xyz/polkadot-sdk", branch = "eth-rollup-develop", default-features = false }
sc-consensus-slots = { git = "https://github.com/gasp-xyz/polkadot-sdk", branch = "eth-rollup-develop", default-features = false }
sc-executor = { git = "https://github.com/gasp-xyz/polkadot-sdk", branch = "eth-rollup-develop", default-features = false }
sc-executor-common = { git = "https://github.com/gasp-xyz/polkadot-sdk", branch = "eth-rollup-develop", default-features = false }
sc-executor-polkavm = { git = "https://github.com/gasp-xyz/polkadot-sdk", branch = "eth-rollup-develop", default-features = false }
sc-executor-wasmtime = { git = "https://github.com/gasp-xyz/polkadot-sdk", branch = "eth-rollup-develop", default-features = false }
sc-informant = { git = "https://github.com/gasp-xyz/polkadot-sdk", branch = "eth-rollup-develop", default-features = false }
sc-keystore = { git = "https://github.com/gasp-xyz/polkadot-sdk", branch = "eth-rollup-develop", default-features = false }
sc-mixnet = { git = "https://github.com/gasp-xyz/polkadot-sdk", branch = "eth-rollup-develop", default-features = false }
sc-network = { git = "https://github.com/gasp-xyz/polkadot-sdk", branch = "eth-rollup-develop", default-features = false }
sc-network-bitswap = { git = "https://github.com/gasp-xyz/polkadot-sdk", branch = "eth-rollup-develop", default-features = false }
sc-network-common = { git = "https://github.com/gasp-xyz/polkadot-sdk", branch = "eth-rollup-develop", default-features = false }
sc-network-gossip = { git = "https://github.com/gasp-xyz/polkadot-sdk", branch = "eth-rollup-develop", default-features = false }
sc-network-light = { git = "https://github.com/gasp-xyz/polkadot-sdk", branch = "eth-rollup-develop", default-features = false }
sc-network-sync = { git = "https://github.com/gasp-xyz/polkadot-sdk", branch = "eth-rollup-develop", default-features = false }
sc-network-transactions = { git = "https://github.com/gasp-xyz/polkadot-sdk", branch = "eth-rollup-develop", default-features = false }
sc-offchain = { git = "https://github.com/gasp-xyz/polkadot-sdk", branch = "eth-rollup-develop", default-features = false }
sc-proposer-metrics = { git = "https://github.com/gasp-xyz/polkadot-sdk", branch = "eth-rollup-develop", default-features = false }
sc-rpc = { git = "https://github.com/gasp-xyz/polkadot-sdk", branch = "eth-rollup-develop", default-features = false }
sc-rpc-api = { git = "https://github.com/gasp-xyz/polkadot-sdk", branch = "eth-rollup-develop", default-features = false }
sc-rpc-server = { git = "https://github.com/gasp-xyz/polkadot-sdk", branch = "eth-rollup-develop", default-features = false }
sc-rpc-spec-v2 = { git = "https://github.com/gasp-xyz/polkadot-sdk", branch = "eth-rollup-develop", default-features = false }
sc-service = { git = "https://github.com/gasp-xyz/polkadot-sdk", branch = "eth-rollup-develop", default-features = false }
sc-state-db = { git = "https://github.com/gasp-xyz/polkadot-sdk", branch = "eth-rollup-develop", default-features = false }
sc-sysinfo = { git = "https://github.com/gasp-xyz/polkadot-sdk", branch = "eth-rollup-develop", default-features = false }
sc-telemetry = { git = "https://github.com/gasp-xyz/polkadot-sdk", branch = "eth-rollup-develop", default-features = false }
sc-tracing = { git = "https://github.com/gasp-xyz/polkadot-sdk", branch = "eth-rollup-develop", default-features = false }
sc-tracing-proc-macro = { git = "https://github.com/gasp-xyz/polkadot-sdk", branch = "eth-rollup-develop", default-features = false }
sc-transaction-pool = { git = "https://github.com/gasp-xyz/polkadot-sdk", branch = "eth-rollup-develop", default-features = false }
sc-transaction-pool-api = { git = "https://github.com/gasp-xyz/polkadot-sdk", branch = "eth-rollup-develop", default-features = false }
sc-utils = { git = "https://github.com/gasp-xyz/polkadot-sdk", branch = "eth-rollup-develop", default-features = false }
sp-api = { git = "https://github.com/gasp-xyz/polkadot-sdk", branch = "eth-rollup-develop", default-features = false }
sp-api-proc-macro = { git = "https://github.com/gasp-xyz/polkadot-sdk", branch = "eth-rollup-develop", default-features = false }
sp-application-crypto = { git = "https://github.com/gasp-xyz/polkadot-sdk", branch = "eth-rollup-develop", default-features = false }
sp-arithmetic = { git = "https://github.com/gasp-xyz/polkadot-sdk", branch = "eth-rollup-develop", default-features = false }
sp-block-builder = { git = "https://github.com/gasp-xyz/polkadot-sdk", branch = "eth-rollup-develop", default-features = false }
sp-blockchain = { git = "https://github.com/gasp-xyz/polkadot-sdk", branch = "eth-rollup-develop", default-features = false }
sp-consensus = { git = "https://github.com/gasp-xyz/polkadot-sdk", branch = "eth-rollup-develop", default-features = false }
sp-consensus-aura = { git = "https://github.com/gasp-xyz/polkadot-sdk", branch = "eth-rollup-develop", default-features = false }
sp-consensus-babe = { git = "https://github.com/gasp-xyz/polkadot-sdk", branch = "eth-rollup-develop", default-features = false }
sp-consensus-grandpa = { git = "https://github.com/gasp-xyz/polkadot-sdk", branch = "eth-rollup-develop", default-features = false }
sp-consensus-slots = { git = "https://github.com/gasp-xyz/polkadot-sdk", branch = "eth-rollup-develop", default-features = false }
sp-core = { git = "https://github.com/gasp-xyz/polkadot-sdk", branch = "eth-rollup-develop", default-features = false }
sp-crypto-hashing = { git = "https://github.com/gasp-xyz/polkadot-sdk", branch = "eth-rollup-develop", default-features = false }
sp-crypto-hashing-proc-macro = { git = "https://github.com/gasp-xyz/polkadot-sdk", branch = "eth-rollup-develop", default-features = false }
sp-database = { git = "https://github.com/gasp-xyz/polkadot-sdk", branch = "eth-rollup-develop", default-features = false }
sp-debug-derive = { git = "https://github.com/gasp-xyz/polkadot-sdk", branch = "eth-rollup-develop", default-features = false }
sp-externalities = { git = "https://github.com/gasp-xyz/polkadot-sdk", branch = "eth-rollup-develop", default-features = false }
sp-genesis-builder = { git = "https://github.com/gasp-xyz/polkadot-sdk", branch = "eth-rollup-develop", default-features = false }
sp-inherents = { git = "https://github.com/gasp-xyz/polkadot-sdk", branch = "eth-rollup-develop", default-features = false }
sp-io = { git = "https://github.com/gasp-xyz/polkadot-sdk", branch = "eth-rollup-develop", default-features = false }
sp-keyring = { git = "https://github.com/gasp-xyz/polkadot-sdk", branch = "eth-rollup-develop", default-features = false }
sp-keystore = { git = "https://github.com/gasp-xyz/polkadot-sdk", branch = "eth-rollup-develop", default-features = false }
sp-maybe-compressed-blob = { git = "https://github.com/gasp-xyz/polkadot-sdk", branch = "eth-rollup-develop", default-features = false }
sp-metadata-ir = { git = "https://github.com/gasp-xyz/polkadot-sdk", branch = "eth-rollup-develop", default-features = false }
sp-mixnet = { git = "https://github.com/gasp-xyz/polkadot-sdk", branch = "eth-rollup-develop", default-features = false }
sp-offchain = { git = "https://github.com/gasp-xyz/polkadot-sdk", branch = "eth-rollup-develop", default-features = false }
sp-panic-handler = { git = "https://github.com/gasp-xyz/polkadot-sdk", branch = "eth-rollup-develop", default-features = false }
sp-rpc = { git = "https://github.com/gasp-xyz/polkadot-sdk", branch = "eth-rollup-develop", default-features = false }
sp-runtime = { git = "https://github.com/gasp-xyz/polkadot-sdk", branch = "eth-rollup-develop", default-features = false }
sp-runtime-interface = { git = "https://github.com/gasp-xyz/polkadot-sdk", branch = "eth-rollup-develop", default-features = false }
sp-runtime-interface-proc-macro = { git = "https://github.com/gasp-xyz/polkadot-sdk", branch = "eth-rollup-develop", default-features = false }
sp-session = { git = "https://github.com/gasp-xyz/polkadot-sdk", branch = "eth-rollup-develop", default-features = false }
sp-staking = { git = "https://github.com/gasp-xyz/polkadot-sdk", branch = "eth-rollup-develop", default-features = false }
sp-state-machine = { git = "https://github.com/gasp-xyz/polkadot-sdk", branch = "eth-rollup-develop", default-features = false }
sp-statement-store = { git = "https://github.com/gasp-xyz/polkadot-sdk", branch = "eth-rollup-develop", default-features = false }
sp-std = { git = "https://github.com/gasp-xyz/polkadot-sdk", branch = "eth-rollup-develop", default-features = false }
sp-storage = { git = "https://github.com/gasp-xyz/polkadot-sdk", branch = "eth-rollup-develop", default-features = false }
sp-timestamp = { git = "https://github.com/gasp-xyz/polkadot-sdk", branch = "eth-rollup-develop", default-features = false }
sp-tracing = { git = "https://github.com/gasp-xyz/polkadot-sdk", branch = "eth-rollup-develop", default-features = false }
sp-transaction-pool = { git = "https://github.com/gasp-xyz/polkadot-sdk", branch = "eth-rollup-develop", default-features = false }
sp-transaction-storage-proof = { git = "https://github.com/gasp-xyz/polkadot-sdk", branch = "eth-rollup-develop", default-features = false }
sp-trie = { git = "https://github.com/gasp-xyz/polkadot-sdk", branch = "eth-rollup-develop", default-features = false }
sp-ver = { git = "https://github.com/gasp-xyz/polkadot-sdk", branch = "eth-rollup-develop", default-features = false }
sp-version = { git = "https://github.com/gasp-xyz/polkadot-sdk", branch = "eth-rollup-develop", default-features = false }
sp-version-proc-macro = { git = "https://github.com/gasp-xyz/polkadot-sdk", branch = "eth-rollup-develop", default-features = false }
sp-wasm-interface = { git = "https://github.com/gasp-xyz/polkadot-sdk", branch = "eth-rollup-develop", default-features = false }
sp-weights = { git = "https://github.com/gasp-xyz/polkadot-sdk", branch = "eth-rollup-develop", default-features = false }
substrate-bip39 = { git = "https://github.com/gasp-xyz/polkadot-sdk", branch = "eth-rollup-develop", default-features = false }
substrate-build-script-utils = { git = "https://github.com/gasp-xyz/polkadot-sdk", branch = "eth-rollup-develop", default-features = false }
substrate-prometheus-endpoint = { git = "https://github.com/gasp-xyz/polkadot-sdk", branch = "eth-rollup-develop", default-features = false }
substrate-test-client = { git = "https://github.com/gasp-xyz/polkadot-sdk", branch = "eth-rollup-develop", default-features = false }
substrate-test-runtime = { git = "https://github.com/gasp-xyz/polkadot-sdk", branch = "eth-rollup-develop", default-features = false }
substrate-test-runtime-client = { git = "https://github.com/gasp-xyz/polkadot-sdk", branch = "eth-rollup-develop", default-features = false }
substrate-wasm-builder = { git = "https://github.com/gasp-xyz/polkadot-sdk", branch = "eth-rollup-develop", default-features = false }
try-runtime-cli = { git = "https://github.com/gasp-xyz/polkadot-sdk", branch = "eth-rollup-develop", default-features = false }
ver-api = { git = "https://github.com/gasp-xyz/polkadot-sdk", branch = "eth-rollup-develop", default-features = false }
# pallet-collective-mangata-rpc = { git = "https://github.com/gasp-xyz/polkadot-sdk", branch = "eth-rollup-develop", default-features = false }
pallet-collective-mangata-rpc = { git = "https://github.com/gasp-xyz/polkadot-sdk", branch = "feat/council-rpc", default-features = false }

[patch."https://github.com/paritytech/polkadot-sdk"]
# ... which satisfies git dependency `sp-crypto-ec-utils` of package `sp-ark-bls12-381 v0.4.2 (https://github.com/paritytech/arkworks-substrate#caa2eed7)`
sp-crypto-ec-utils = { git = "https://github.com/gasp-xyz/polkadot-sdk", branch = "eth-rollup-develop" }

# patch generated by './scripts/dev_manifest.sh ../polkadot-sdk'
[patch."https://github.com/gasp-xyz/polkadot-sdk"]
substrate-test-runtime = { git = "https://github.com//gasp-xyz/polkadot-sdk", branch = "feat/council-rpc" }
substrate-test-runtime-client = { git = "https://github.com//gasp-xyz/polkadot-sdk", branch = "feat/council-rpc" }
substrate-test-client = { git = "https://github.com//gasp-xyz/polkadot-sdk", branch = "feat/council-rpc" }
pallet-transaction-payment = { git = "https://github.com//gasp-xyz/polkadot-sdk", branch = "feat/council-rpc" }
pallet-transaction-payment-rpc = { git = "https://github.com//gasp-xyz/polkadot-sdk", branch = "feat/council-rpc" }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com//gasp-xyz/polkadot-sdk", branch = "feat/council-rpc" }
pallet-collective-mangata = { git = "https://github.com//gasp-xyz/polkadot-sdk", branch = "feat/council-rpc" }
pallet-proxy = { git = "https://github.com//gasp-xyz/polkadot-sdk", branch = "feat/council-rpc" }
pallet-identity = { git = "https://github.com//gasp-xyz/polkadot-sdk", branch = "feat/council-rpc" }
pallet-sudo-mangata = { git = "https://github.com//gasp-xyz/polkadot-sdk", branch = "feat/council-rpc" }
mangata-support = { git = "https://github.com//gasp-xyz/polkadot-sdk", branch = "feat/council-rpc" }
pallet-utility-mangata = { git = "https://github.com//gasp-xyz/polkadot-sdk", branch = "feat/council-rpc" }
pallet-authorship = { git = "https://github.com//gasp-xyz/polkadot-sdk", branch = "feat/council-rpc" }
pallet-grandpa = { git = "https://github.com//gasp-xyz/polkadot-sdk", branch = "feat/council-rpc" }
pallet-vesting-mangata = { git = "https://github.com//gasp-xyz/polkadot-sdk", branch = "feat/council-rpc" }
frame-system = { git = "https://github.com//gasp-xyz/polkadot-sdk", branch = "feat/council-rpc" }
frame-system-benchmarking = { git = "https://github.com//gasp-xyz/polkadot-sdk", branch = "feat/council-rpc" }
frame-system-rpc-runtime-api = { git = "https://github.com//gasp-xyz/polkadot-sdk", branch = "feat/council-rpc" }
frame-support = { git = "https://github.com//gasp-xyz/polkadot-sdk", branch = "feat/council-rpc" }
frame-support-procedural = { git = "https://github.com//gasp-xyz/polkadot-sdk", branch = "feat/council-rpc" }
frame-support-procedural-tools = { git = "https://github.com//gasp-xyz/polkadot-sdk", branch = "feat/council-rpc" }
frame-support-procedural-tools-derive = { git = "https://github.com//gasp-xyz/polkadot-sdk", branch = "feat/council-rpc" }
pallet-balances = { git = "https://github.com//gasp-xyz/polkadot-sdk", branch = "feat/council-rpc" }
pallet-aura = { git = "https://github.com//gasp-xyz/polkadot-sdk", branch = "feat/council-rpc" }
frame-benchmarking = { git = "https://github.com//gasp-xyz/polkadot-sdk", branch = "feat/council-rpc" }
pallet-treasury = { git = "https://github.com//gasp-xyz/polkadot-sdk", branch = "feat/council-rpc" }
frame-try-runtime = { git = "https://github.com//gasp-xyz/polkadot-sdk", branch = "feat/council-rpc" }
pallet-timestamp = { git = "https://github.com//gasp-xyz/polkadot-sdk", branch = "feat/council-rpc" }
pallet-babe = { git = "https://github.com//gasp-xyz/polkadot-sdk", branch = "feat/council-rpc" }
pallet-membership = { git = "https://github.com//gasp-xyz/polkadot-sdk", branch = "feat/council-rpc" }
pallet-utility = { git = "https://github.com//gasp-xyz/polkadot-sdk", branch = "feat/council-rpc" }
frame-executive = { git = "https://github.com//gasp-xyz/polkadot-sdk", branch = "feat/council-rpc" }
pallet-session = { git = "https://github.com//gasp-xyz/polkadot-sdk", branch = "feat/council-rpc" }
substrate-wasm-builder = { git = "https://github.com//gasp-xyz/polkadot-sdk", branch = "feat/council-rpc" }
fork-tree = { git = "https://github.com//gasp-xyz/polkadot-sdk", branch = "feat/council-rpc" }
substrate-build-script-utils = { git = "https://github.com//gasp-xyz/polkadot-sdk", branch = "feat/council-rpc" }
frame-benchmarking-cli = { git = "https://github.com//gasp-xyz/polkadot-sdk", branch = "feat/council-rpc" }
substrate-bip39 = { git = "https://github.com//gasp-xyz/polkadot-sdk", branch = "feat/council-rpc" }
substrate-prometheus-endpoint = { git = "https://github.com//gasp-xyz/polkadot-sdk", branch = "feat/council-rpc" }
sp-database = { git = "https://github.com//gasp-xyz/polkadot-sdk", branch = "feat/council-rpc" }
sp-runtime-interface = { git = "https://github.com//gasp-xyz/polkadot-sdk", branch = "feat/council-rpc" }
sp-runtime-interface-proc-macro = { git = "https://github.com//gasp-xyz/polkadot-sdk", branch = "feat/council-rpc" }
sp-consensus-grandpa = { git = "https://github.com//gasp-xyz/polkadot-sdk", branch = "feat/council-rpc" }
sp-consensus = { git = "https://github.com//gasp-xyz/polkadot-sdk", branch = "feat/council-rpc" }
sp-consensus-aura = { git = "https://github.com//gasp-xyz/polkadot-sdk", branch = "feat/council-rpc" }
sp-consensus-babe = { git = "https://github.com//gasp-xyz/polkadot-sdk", branch = "feat/council-rpc" }
sp-consensus-slots = { git = "https://github.com//gasp-xyz/polkadot-sdk", branch = "feat/council-rpc" }
sp-tracing = { git = "https://github.com//gasp-xyz/polkadot-sdk", branch = "feat/council-rpc" }
sp-crypto-hashing = { git = "https://github.com//gasp-xyz/polkadot-sdk", branch = "feat/council-rpc" }
sp-crypto-hashing-proc-macro = { git = "https://github.com//gasp-xyz/polkadot-sdk", branch = "feat/council-rpc" }
sp-ver = { git = "https://github.com//gasp-xyz/polkadot-sdk", branch = "feat/council-rpc" }
sp-maybe-compressed-blob = { git = "https://github.com//gasp-xyz/polkadot-sdk", branch = "feat/council-rpc" }
sp-core = { git = "https://github.com//gasp-xyz/polkadot-sdk", branch = "feat/council-rpc" }
sp-state-machine = { git = "https://github.com//gasp-xyz/polkadot-sdk", branch = "feat/council-rpc" }
sp-keystore = { git = "https://github.com//gasp-xyz/polkadot-sdk", branch = "feat/council-rpc" }
sp-metadata-ir = { git = "https://github.com//gasp-xyz/polkadot-sdk", branch = "feat/council-rpc" }
sp-statement-store = { git = "https://github.com//gasp-xyz/polkadot-sdk", branch = "feat/council-rpc" }
sp-weights = { git = "https://github.com//gasp-xyz/polkadot-sdk", branch = "feat/council-rpc" }
sp-io = { git = "https://github.com//gasp-xyz/polkadot-sdk", branch = "feat/council-rpc" }
sp-runtime = { git = "https://github.com//gasp-xyz/polkadot-sdk", branch = "feat/council-rpc" }
sp-inherents = { git = "https://github.com//gasp-xyz/polkadot-sdk", branch = "feat/council-rpc" }
sp-transaction-pool = { git = "https://github.com//gasp-xyz/polkadot-sdk", branch = "feat/council-rpc" }
sp-std = { git = "https://github.com//gasp-xyz/polkadot-sdk", branch = "feat/council-rpc" }
sp-storage = { git = "https://github.com//gasp-xyz/polkadot-sdk", branch = "feat/council-rpc" }
sp-panic-handler = { git = "https://github.com//gasp-xyz/polkadot-sdk", branch = "feat/council-rpc" }
sp-debug-derive = { git = "https://github.com//gasp-xyz/polkadot-sdk", branch = "feat/council-rpc" }
sp-blockchain = { git = "https://github.com//gasp-xyz/polkadot-sdk", branch = "feat/council-rpc" }
sp-externalities = { git = "https://github.com//gasp-xyz/polkadot-sdk", branch = "feat/council-rpc" }
sp-mixnet = { git = "https://github.com//gasp-xyz/polkadot-sdk", branch = "feat/council-rpc" }
sp-trie = { git = "https://github.com//gasp-xyz/polkadot-sdk", branch = "feat/council-rpc" }
mangata-types = { git = "https://github.com//gasp-xyz/polkadot-sdk", branch = "feat/council-rpc" }
sp-version = { git = "https://github.com//gasp-xyz/polkadot-sdk", branch = "feat/council-rpc" }
sp-version-proc-macro = { git = "https://github.com//gasp-xyz/polkadot-sdk", branch = "feat/council-rpc" }
sp-block-builder = { git = "https://github.com//gasp-xyz/polkadot-sdk", branch = "feat/council-rpc" }
sp-keyring = { git = "https://github.com//gasp-xyz/polkadot-sdk", branch = "feat/council-rpc" }
sp-staking = { git = "https://github.com//gasp-xyz/polkadot-sdk", branch = "feat/council-rpc" }
sp-wasm-interface = { git = "https://github.com//gasp-xyz/polkadot-sdk", branch = "feat/council-rpc" }
sp-transaction-storage-proof = { git = "https://github.com//gasp-xyz/polkadot-sdk", branch = "feat/council-rpc" }
extrinsic-shuffler = { git = "https://github.com//gasp-xyz/polkadot-sdk", branch = "feat/council-rpc" }
sp-arithmetic = { git = "https://github.com//gasp-xyz/polkadot-sdk", branch = "feat/council-rpc" }
sp-api = { git = "https://github.com//gasp-xyz/polkadot-sdk", branch = "feat/council-rpc" }
sp-api-proc-macro = { git = "https://github.com//gasp-xyz/polkadot-sdk", branch = "feat/council-rpc" }
sp-offchain = { git = "https://github.com//gasp-xyz/polkadot-sdk", branch = "feat/council-rpc" }
sp-timestamp = { git = "https://github.com//gasp-xyz/polkadot-sdk", branch = "feat/council-rpc" }
sp-application-crypto = { git = "https://github.com//gasp-xyz/polkadot-sdk", branch = "feat/council-rpc" }
sp-rpc = { git = "https://github.com//gasp-xyz/polkadot-sdk", branch = "feat/council-rpc" }
ver-api = { git = "https://github.com//gasp-xyz/polkadot-sdk", branch = "feat/council-rpc" }
sp-genesis-builder = { git = "https://github.com//gasp-xyz/polkadot-sdk", branch = "feat/council-rpc" }
sp-session = { git = "https://github.com//gasp-xyz/polkadot-sdk", branch = "feat/council-rpc" }
sc-consensus-grandpa = { git = "https://github.com//gasp-xyz/polkadot-sdk", branch = "feat/council-rpc" }
sc-consensus = { git = "https://github.com//gasp-xyz/polkadot-sdk", branch = "feat/council-rpc" }
sc-consensus-aura = { git = "https://github.com//gasp-xyz/polkadot-sdk", branch = "feat/council-rpc" }
sc-consensus-slots = { git = "https://github.com//gasp-xyz/polkadot-sdk", branch = "feat/council-rpc" }
sc-tracing = { git = "https://github.com//gasp-xyz/polkadot-sdk", branch = "feat/council-rpc" }
sc-tracing-proc-macro = { git = "https://github.com//gasp-xyz/polkadot-sdk", branch = "feat/council-rpc" }
sc-rpc-spec-v2 = { git = "https://github.com//gasp-xyz/polkadot-sdk", branch = "feat/council-rpc" }
sc-state-db = { git = "https://github.com//gasp-xyz/polkadot-sdk", branch = "feat/council-rpc" }
sc-proposer-metrics = { git = "https://github.com//gasp-xyz/polkadot-sdk", branch = "feat/council-rpc" }
sc-keystore = { git = "https://github.com//gasp-xyz/polkadot-sdk", branch = "feat/council-rpc" }
sc-basic-authorship-ver = { git = "https://github.com//gasp-xyz/polkadot-sdk", branch = "feat/council-rpc" }
sc-rpc-server = { git = "https://github.com//gasp-xyz/polkadot-sdk", branch = "feat/council-rpc" }
sc-network = { git = "https://github.com//gasp-xyz/polkadot-sdk", branch = "feat/council-rpc" }
sc-network-bitswap = { git = "https://github.com//gasp-xyz/polkadot-sdk", branch = "feat/council-rpc" }
sc-network-transactions = { git = "https://github.com//gasp-xyz/polkadot-sdk", branch = "feat/council-rpc" }
sc-network-common = { git = "https://github.com//gasp-xyz/polkadot-sdk", branch = "feat/council-rpc" }
sc-network-light = { git = "https://github.com//gasp-xyz/polkadot-sdk", branch = "feat/council-rpc" }
sc-network-sync = { git = "https://github.com//gasp-xyz/polkadot-sdk", branch = "feat/council-rpc" }
sc-informant = { git = "https://github.com//gasp-xyz/polkadot-sdk", branch = "feat/council-rpc" }
sc-transaction-pool = { git = "https://github.com//gasp-xyz/polkadot-sdk", branch = "feat/council-rpc" }
sc-transaction-pool-api = { git = "https://github.com//gasp-xyz/polkadot-sdk", branch = "feat/council-rpc" }
sc-utils = { git = "https://github.com//gasp-xyz/polkadot-sdk", branch = "feat/council-rpc" }
sc-cli = { git = "https://github.com//gasp-xyz/polkadot-sdk", branch = "feat/council-rpc" }
sc-chain-spec = { git = "https://github.com//gasp-xyz/polkadot-sdk", branch = "feat/council-rpc" }
sc-chain-spec-derive = { git = "https://github.com//gasp-xyz/polkadot-sdk", branch = "feat/council-rpc" }
sc-block-builder-ver = { git = "https://github.com//gasp-xyz/polkadot-sdk", branch = "feat/council-rpc" }
sc-mixnet = { git = "https://github.com//gasp-xyz/polkadot-sdk", branch = "feat/council-rpc" }
sc-block-builder = { git = "https://github.com//gasp-xyz/polkadot-sdk", branch = "feat/council-rpc" }
sc-allocator = { git = "https://github.com//gasp-xyz/polkadot-sdk", branch = "feat/council-rpc" }
sc-network-gossip = { git = "https://github.com//gasp-xyz/polkadot-sdk", branch = "feat/council-rpc" }
sc-client-db = { git = "https://github.com//gasp-xyz/polkadot-sdk", branch = "feat/council-rpc" }
sc-client-api = { git = "https://github.com//gasp-xyz/polkadot-sdk", branch = "feat/council-rpc" }
sc-sysinfo = { git = "https://github.com//gasp-xyz/polkadot-sdk", branch = "feat/council-rpc" }
sc-executor = { git = "https://github.com//gasp-xyz/polkadot-sdk", branch = "feat/council-rpc" }
sc-executor-wasmtime = { git = "https://github.com//gasp-xyz/polkadot-sdk", branch = "feat/council-rpc" }
sc-executor-common = { git = "https://github.com//gasp-xyz/polkadot-sdk", branch = "feat/council-rpc" }
sc-executor-polkavm = { git = "https://github.com//gasp-xyz/polkadot-sdk", branch = "feat/council-rpc" }
sc-telemetry = { git = "https://github.com//gasp-xyz/polkadot-sdk", branch = "feat/council-rpc" }
sc-offchain = { git = "https://github.com//gasp-xyz/polkadot-sdk", branch = "feat/council-rpc" }
sc-service = { git = "https://github.com//gasp-xyz/polkadot-sdk", branch = "feat/council-rpc" }
sc-rpc = { git = "https://github.com//gasp-xyz/polkadot-sdk", branch = "feat/council-rpc" }
sc-rpc-api = { git = "https://github.com//gasp-xyz/polkadot-sdk", branch = "feat/council-rpc" }

# # patch generated by './scripts/dev_manifest.sh ../open-runtime-module-library/'
# [patch."https://github.com/gasp-xyz/open-runtime-module-library"]
# orml-tokens = { git = "https://github.com//gasp-xyz/open-runtime-module-library", branch = "feature/transfer-allowlist", default-features = false }
# orml-asset-registry = { git = "https://github.com//gasp-xyz/open-runtime-module-library", branch = "feature/transfer-allowlist", default-features = false }
# orml-traits = { git = "https://github.com//gasp-xyz/open-runtime-module-library", branch = "feature/transfer-allowlist", default-features = false }
# orml-utilities = { git = "https://github.com//gasp-xyz/open-runtime-module-library", branch = "feature/transfer-allowlist", default-features = false }

# # # patch generated by './scripts/dev_manifest.sh ../../polkadot-sdk/'
# # [patch."https://github.com/gasp-xyz/polkadot-sdk"]
# substrate-wasm-builder = { path = "../../polkadot-sdk/substrate/utils/wasm-builder", default-features = false }
# frame-benchmarking-cli = { path = "../../polkadot-sdk/substrate/utils/frame/benchmarking-cli", default-features = false }
# substrate-bip39 = { path = "../../polkadot-sdk/substrate/utils/substrate-bip39", default-features = false }
# substrate-prometheus-endpoint = { path = "../../polkadot-sdk/substrate/utils/prometheus", default-features = false }
# fork-tree = { path = "../../polkadot-sdk/substrate/utils/fork-tree", default-features = false }
# substrate-build-script-utils = { path = "../../polkadot-sdk/substrate/utils/build-script-utils", default-features = false }
# substrate-test-client = { path = "../../polkadot-sdk/substrate/test-utils/client", default-features = false }
# substrate-test-runtime = { path = "../../polkadot-sdk/substrate/test-utils/runtime", default-features = false }
# substrate-test-runtime-client = { path = "../../polkadot-sdk/substrate/test-utils/runtime/client", default-features = false }
# frame-try-runtime = { path = "../../polkadot-sdk/substrate/frame/try-runtime", default-features = false }
# pallet-timestamp = { path = "../../polkadot-sdk/substrate/frame/timestamp", default-features = false }
# pallet-membership = { path = "../../polkadot-sdk/substrate/frame/membership", default-features = false }
# pallet-sudo-mangata = { path = "../../polkadot-sdk/substrate/frame/sudo-mangata", default-features = false }
# pallet-treasury = { path = "../../polkadot-sdk/substrate/frame/treasury", default-features = false }
# pallet-collective-mangata = { path = "../../polkadot-sdk/substrate/frame/collective-mangata", default-features = false }
# frame-system = { path = "../../polkadot-sdk/substrate/frame/system", default-features = false }
# frame-system-benchmarking = { path = "../../polkadot-sdk/substrate/frame/system/benchmarking", default-features = false }
# frame-system-rpc-runtime-api = { path = "../../polkadot-sdk/substrate/frame/system/rpc/runtime-api", default-features = false }
# mangata-support = { path = "../../polkadot-sdk/substrate/frame/mangata-support", default-features = false }
# pallet-balances = { path = "../../polkadot-sdk/substrate/frame/balances", default-features = false }
# pallet-aura = { path = "../../polkadot-sdk/substrate/frame/aura", default-features = false }
# pallet-vesting-mangata = { path = "../../polkadot-sdk/substrate/frame/vesting-mangata", default-features = false }
# pallet-session = { path = "../../polkadot-sdk/substrate/frame/session", default-features = false }
# pallet-utility-mangata = { path = "../../polkadot-sdk/substrate/frame/utility-mangata", default-features = false }
# pallet-identity = { path = "../../polkadot-sdk/substrate/frame/identity", default-features = false }
# pallet-utility = { path = "../../polkadot-sdk/substrate/frame/utility", default-features = false }
# pallet-authorship = { path = "../../polkadot-sdk/substrate/frame/authorship", default-features = false }
# frame-executive = { path = "../../polkadot-sdk/substrate/frame/executive", default-features = false }
# pallet-babe = { path = "../../polkadot-sdk/substrate/frame/babe", default-features = false }
# pallet-transaction-payment = { path = "../../polkadot-sdk/substrate/frame/transaction-payment", default-features = false }
# pallet-transaction-payment-rpc = { path = "../../polkadot-sdk/substrate/frame/transaction-payment/rpc", default-features = false }
# pallet-transaction-payment-rpc-runtime-api = { path = "../../polkadot-sdk/substrate/frame/transaction-payment/rpc/runtime-api", default-features = false }
# pallet-proxy = { path = "../../polkadot-sdk/substrate/frame/proxy", default-features = false }
# pallet-grandpa = { path = "../../polkadot-sdk/substrate/frame/grandpa", default-features = false }
# frame-support = { path = "../../polkadot-sdk/substrate/frame/support", default-features = false }
# frame-support-procedural = { path = "../../polkadot-sdk/substrate/frame/support/procedural", default-features = false }
# frame-support-procedural-tools = { path = "../../polkadot-sdk/substrate/frame/support/procedural/tools", default-features = false }
# frame-support-procedural-tools-derive = { path = "../../polkadot-sdk/substrate/frame/support/procedural/tools/derive", default-features = false }
# frame-benchmarking = { path = "../../polkadot-sdk/substrate/frame/benchmarking", default-features = false }
# sp-application-crypto = { path = "../../polkadot-sdk/substrate/primitives/application-crypto", default-features = false }
# sp-timestamp = { path = "../../polkadot-sdk/substrate/primitives/timestamp", default-features = false }
# sp-crypto-hashing = { path = "../../polkadot-sdk/substrate/primitives/crypto/hashing", default-features = false }
# sp-crypto-hashing-proc-macro = { path = "../../polkadot-sdk/substrate/primitives/crypto/hashing/proc-macro", default-features = false }
# sp-metadata-ir = { path = "../../polkadot-sdk/substrate/primitives/metadata-ir", default-features = false }
# sp-state-machine = { path = "../../polkadot-sdk/substrate/primitives/state-machine", default-features = false }
# sp-tracing = { path = "../../polkadot-sdk/substrate/primitives/tracing", default-features = false }
# sp-mixnet = { path = "../../polkadot-sdk/substrate/primitives/mixnet", default-features = false }
# sp-wasm-interface = { path = "../../polkadot-sdk/substrate/primitives/wasm-interface", default-features = false }
# sp-ver = { path = "../../polkadot-sdk/substrate/primitives/ver", default-features = false }
# sp-blockchain = { path = "../../polkadot-sdk/substrate/primitives/blockchain", default-features = false }
# sp-block-builder = { path = "../../polkadot-sdk/substrate/primitives/block-builder", default-features = false }
# sp-storage = { path = "../../polkadot-sdk/substrate/primitives/storage", default-features = false }
# sp-session = { path = "../../polkadot-sdk/substrate/primitives/session", default-features = false }
# sp-arithmetic = { path = "../../polkadot-sdk/substrate/primitives/arithmetic", default-features = false }
# sp-consensus = { path = "../../polkadot-sdk/substrate/primitives/consensus/common", default-features = false }
# sp-consensus-aura = { path = "../../polkadot-sdk/substrate/primitives/consensus/aura", default-features = false }
# sp-consensus-babe = { path = "../../polkadot-sdk/substrate/primitives/consensus/babe", default-features = false }
# sp-consensus-slots = { path = "../../polkadot-sdk/substrate/primitives/consensus/slots", default-features = false }
# sp-consensus-grandpa = { path = "../../polkadot-sdk/substrate/primitives/consensus/grandpa", default-features = false }
# sp-runtime-interface = { path = "../../polkadot-sdk/substrate/primitives/runtime-interface", default-features = false }
# sp-runtime-interface-proc-macro = { path = "../../polkadot-sdk/substrate/primitives/runtime-interface/proc-macro", default-features = false }
# ver-api = { path = "../../polkadot-sdk/substrate/primitives/ver-api", default-features = false }
# sp-keystore = { path = "../../polkadot-sdk/substrate/primitives/keystore", default-features = false }
# mangata-types = { path = "../../polkadot-sdk/substrate/primitives/mangata-types", default-features = false }
# sp-trie = { path = "../../polkadot-sdk/substrate/primitives/trie", default-features = false }
# sp-transaction-pool = { path = "../../polkadot-sdk/substrate/primitives/transaction-pool", default-features = false }
# sp-api = { path = "../../polkadot-sdk/substrate/primitives/api", default-features = false }
# sp-api-proc-macro = { path = "../../polkadot-sdk/substrate/primitives/api/proc-macro", default-features = false }
# sp-std = { path = "../../polkadot-sdk/substrate/primitives/std", default-features = false }
# sp-keyring = { path = "../../polkadot-sdk/substrate/primitives/keyring", default-features = false }
# sp-version = { path = "../../polkadot-sdk/substrate/primitives/version", default-features = false }
# sp-version-proc-macro = { path = "../../polkadot-sdk/substrate/primitives/version/proc-macro", default-features = false }
# sp-weights = { path = "../../polkadot-sdk/substrate/primitives/weights", default-features = false }
# sp-core = { path = "../../polkadot-sdk/substrate/primitives/core", default-features = false }
# sp-maybe-compressed-blob = { path = "../../polkadot-sdk/substrate/primitives/maybe-compressed-blob", default-features = false }
# extrinsic-shuffler = { path = "../../polkadot-sdk/substrate/primitives/shuffler", default-features = false }
# sp-panic-handler = { path = "../../polkadot-sdk/substrate/primitives/panic-handler", default-features = false }
# sp-inherents = { path = "../../polkadot-sdk/substrate/primitives/inherents", default-features = false }
# sp-transaction-storage-proof = { path = "../../polkadot-sdk/substrate/primitives/transaction-storage-proof", default-features = false }
# sp-runtime = { path = "../../polkadot-sdk/substrate/primitives/runtime", default-features = false }
# sp-io = { path = "../../polkadot-sdk/substrate/primitives/io", default-features = false }
# sp-database = { path = "../../polkadot-sdk/substrate/primitives/database", default-features = false }
# sp-debug-derive = { path = "../../polkadot-sdk/substrate/primitives/debug-derive", default-features = false }
# sp-staking = { path = "../../polkadot-sdk/substrate/primitives/staking", default-features = false }
# sp-rpc = { path = "../../polkadot-sdk/substrate/primitives/rpc", default-features = false }
# sp-offchain = { path = "../../polkadot-sdk/substrate/primitives/offchain", default-features = false }
# sp-statement-store = { path = "../../polkadot-sdk/substrate/primitives/statement-store", default-features = false }
# sp-externalities = { path = "../../polkadot-sdk/substrate/primitives/externalities", default-features = false }
# sp-genesis-builder = { path = "../../polkadot-sdk/substrate/primitives/genesis-builder", default-features = false }
# sc-allocator = { path = "../../polkadot-sdk/substrate/client/allocator", default-features = false }
# sc-rpc-spec-v2 = { path = "../../polkadot-sdk/substrate/client/rpc-spec-v2", default-features = false }
# sc-utils = { path = "../../polkadot-sdk/substrate/client/utils", default-features = false }
# sc-informant = { path = "../../polkadot-sdk/substrate/client/informant", default-features = false }
# sc-basic-authorship-ver = { path = "../../polkadot-sdk/substrate/client/basic-authorship-ver", default-features = false }
# sc-tracing = { path = "../../polkadot-sdk/substrate/client/tracing", default-features = false }
# sc-tracing-proc-macro = { path = "../../polkadot-sdk/substrate/client/tracing/proc-macro", default-features = false }
# sc-mixnet = { path = "../../polkadot-sdk/substrate/client/mixnet", default-features = false }
# sc-state-db = { path = "../../polkadot-sdk/substrate/client/state-db", default-features = false }
# sc-executor = { path = "../../polkadot-sdk/substrate/client/executor", default-features = false }
# sc-executor-polkavm = { path = "../../polkadot-sdk/substrate/client/executor/polkavm", default-features = false }
# sc-executor-wasmtime = { path = "../../polkadot-sdk/substrate/client/executor/wasmtime", default-features = false }
# sc-executor-common = { path = "../../polkadot-sdk/substrate/client/executor/common", default-features = false }
# sc-block-builder = { path = "../../polkadot-sdk/substrate/client/block-builder", default-features = false }
# sc-telemetry = { path = "../../polkadot-sdk/substrate/client/telemetry", default-features = false }
# sc-consensus = { path = "../../polkadot-sdk/substrate/client/consensus/common", default-features = false }
# sc-consensus-aura = { path = "../../polkadot-sdk/substrate/client/consensus/aura", default-features = false }
# sc-consensus-slots = { path = "../../polkadot-sdk/substrate/client/consensus/slots", default-features = false }
# sc-consensus-grandpa = { path = "../../polkadot-sdk/substrate/client/consensus/grandpa", default-features = false }
# sc-keystore = { path = "../../polkadot-sdk/substrate/client/keystore", default-features = false }
# sc-block-builder-ver = { path = "../../polkadot-sdk/substrate/client/block-builder-ver", default-features = false }
# sc-proposer-metrics = { path = "../../polkadot-sdk/substrate/client/proposer-metrics", default-features = false }
# sc-transaction-pool = { path = "../../polkadot-sdk/substrate/client/transaction-pool", default-features = false }
# sc-transaction-pool-api = { path = "../../polkadot-sdk/substrate/client/transaction-pool/api", default-features = false }
# sc-network = { path = "../../polkadot-sdk/substrate/client/network", default-features = false }
# sc-network-common = { path = "../../polkadot-sdk/substrate/client/network/common", default-features = false }
# sc-network-bitswap = { path = "../../polkadot-sdk/substrate/client/network/bitswap", default-features = false }
# sc-network-sync = { path = "../../polkadot-sdk/substrate/client/network/sync", default-features = false }
# sc-network-light = { path = "../../polkadot-sdk/substrate/client/network/light", default-features = false }
# sc-network-transactions = { path = "../../polkadot-sdk/substrate/client/network/transactions", default-features = false }
# sc-client-api = { path = "../../polkadot-sdk/substrate/client/api", default-features = false }
# sc-network-gossip = { path = "../../polkadot-sdk/substrate/client/network-gossip", default-features = false }
# sc-chain-spec = { path = "../../polkadot-sdk/substrate/client/chain-spec", default-features = false }
# sc-chain-spec-derive = { path = "../../polkadot-sdk/substrate/client/chain-spec/derive", default-features = false }
# sc-rpc-api = { path = "../../polkadot-sdk/substrate/client/rpc-api", default-features = false }
# sc-cli = { path = "../../polkadot-sdk/substrate/client/cli", default-features = false }
# sc-service = { path = "../../polkadot-sdk/substrate/client/service", default-features = false }
# sc-rpc-server = { path = "../../polkadot-sdk/substrate/client/rpc-servers", default-features = false }
# sc-sysinfo = { path = "../../polkadot-sdk/substrate/client/sysinfo", default-features = false }
# sc-client-db = { path = "../../polkadot-sdk/substrate/client/db", default-features = false }
# sc-rpc = { path = "../../polkadot-sdk/substrate/client/rpc", default-features = false }
# sc-offchain = { path = "../../polkadot-sdk/substrate/client/offchain", default-features = false }
# try-runtime-cli = { path = "../../polkadot-sdk/substrate/utils/frame/try-runtime/cli", default-features = false }
# pallet-collective-mangata-rpc = { path = "../../polkadot-sdk/substrate/frame/collective-mangata/rpc", default-features = false }

# # patch generated by './scripts/dev_manifest.sh ../open-runtime-module-library/'
# [patch."https://github.com/gasp-xyz/open-runtime-module-library"]
# orml-tokens = { path = "../../open-runtime-module-library/tokens", default-features = false }
# orml-asset-registry = { path = "../../open-runtime-module-library/asset-registry", default-features = false }
# orml-traits = { path = "../../open-runtime-module-library/traits", default-features = false }
# orml-utilities = { path = "../../open-runtime-module-library/utilities", default-features = false }
